src/objects/Application_Request__c.object
<CustomObject>
    <description>Fleet application request</description>
    <fields>
        <fullName>ABA_Routing_Number__c</fullName>
        <label>ABA Routing #</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <formula>Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Application Requests</relationshipLabel>
        <relationshipName>Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Gross_Revenue__c</fullName>
        <label>Annual Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Approved_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Declined_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Log__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App Log #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Signer_Accepts_Terms_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App Signer Accepts Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Signer_Email__c</fullName>
        <formula>App_Signer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Signer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Signer_IP_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App Signer IP Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Signer_Is_Business_Name__c</fullName>
        <formula>IF(App_Signer__c == Opportunity_Name_Text__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Signer Is Business Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Signer_Last_Name_Text__c</fullName>
        <formula>App_Signer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Signer Last Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Signer_Name_Text__c</fullName>
        <formula>App_Signer__r.FirstName &amp;&quot; &quot;&amp;App_Signer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Signer Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Signer_Title__c</fullName>
        <formula>App_Signer__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Signer Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App Signer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Requests (App Signer)</relationshipLabel>
        <relationshipName>Application_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Submitted_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>App Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Channel__c</fullName>
        <formula>IF(
  Sales_Person__r.Alias &lt;&gt; &quot;sinte&quot;, &quot;Traditional&quot;,
  IF(
    OR(
      UPPER(Campaign_Type__c) = UPPER(&apos;Acquire&apos;),
      UPPER(Campaign_Type__c) = UPPER(&apos;Call Program&apos;),
      UPPER(Campaign_Type__c) = UPPER(&apos;Direct Mail&apos;),
      UPPER(Campaign_Type__c) = UPPER(&apos;Email Blast&apos;)
      ),
    &apos;BOCA Solicited&apos;,
    &apos;BOCA&apos;
    )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Signer_FirstName_Text__c</fullName>
        <formula>App_Signer__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Signer First Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Signer_Phone__c</fullName>
        <formula>App_Signer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Signer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Stage__c</fullName>
        <label>Application Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Adjudication</fullName>
                </value>
                <value>
                    <fullName>Credit Follow-up</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved - Conditions</fullName>
                </value>
                <value>
                    <fullName>Approved - Rereview-Conditional</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Declined - Pending Conditions</fullName>
                </value>
                <value>
                    <fullName>Declined Rerevw - Pending Conditions</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Manager Review</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Re-review Aproved</fullName>
                </value>
                <value>
                    <fullName>Re-review Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Credit_Limit__c</fullName>
        <label>Approved Credit Limit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <description>CP APP Approver</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>CorporatePay Management Staff responsible for approving the Application</inlineHelpText>
        <label>Approver</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BOCA_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Campaign_Program__r.Program__r.BOCA_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOCA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO_Status__c</fullName>
        <formula>IF(AND(Opportunity__c != null, Opportunity__r.Beneficial_Owner_Entity__c != null),
TEXT(Opportunity__r.Beneficial_Owner_Entity__r.Verification_Status__c),
TEXT(Beneficial_Owner_Information__r.Verification_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beneficial Owner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO_Verification_Log__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BO Verification Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BPAV_Check__c</fullName>
        <label>BPAV Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPAV_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BPAV Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Date__c</fullName>
        <label>Bankruptcy Date</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beneficial_Owner_Entity__c</fullName>
        <formula>IF(AND(Opportunity__c != null, Opportunity__r.Beneficial_Owner_Entity__c != null),
HYPERLINK(Opportunity__r.Beneficial_Owner_Entity__c, Opportunity__r.Beneficial_Owner_Entity__r.Name),
HYPERLINK(Beneficial_Owner_Information__c, Beneficial_Owner_Information__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beneficial Owner Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficial_Owner_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficial Owner Information</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Beneficial_Owner_Entity__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Beneficial_Owner_Entity__c</referenceTo>
        <relationshipLabel>Application Requests</relationshipLabel>
        <relationshipName>Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefits_of_Change__c</fullName>
        <description>CP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefits of Change</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email_Workflow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Contact Email Workflow</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <formula>Billing_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Fax_Number__c</fullName>
        <formula>Billing_Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Fax Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_First_Name_Text__c</fullName>
        <formula>Billing_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact First Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Last_Name_Text__c</fullName>
        <formula>Billing_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Last Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone_Number__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Billing_Contact__r.Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <formula>Billing_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Requests (Billing Contact)</relationshipLabel>
        <relationshipName>Application_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Street Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Table_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Table ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bureau Tax ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Fax__c</fullName>
        <formula>Account_Name__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Number__c</fullName>
        <formula>Account_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Program__c</fullName>
        <formula>Opportunity__r.Program_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Campaign.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Production_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Card Production Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checking_Account_Number__c</fullName>
        <label>Checking Account #</label>
        <length>14</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Communications_Preference__c</fullName>
        <label>Communications Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Requests_Compliance_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Decision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Decision Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Decision__c</fullName>
        <label>Compliance Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <formula>IF(Opportunity__r.Consumer__c, &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Year__c</fullName>
        <description>Year present management assumed control of this business</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Control Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Guarantor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Application Requests (Account)</relationshipLabel>
        <relationshipName>Application_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_to_Deliver__c</fullName>
        <description>Cost of Project</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>CorporatePay Cost for delivery of Projects</inlineHelpText>
        <label>Cost to Deliver</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Code__c</fullName>
        <formula>Opportunity__r.Coupon_Code2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coupon Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Echosign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By Echosign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Requests_Credit_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Score__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Bureau Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Source__c</fullName>
        <label>Decision Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aged Out</fullName>
                </value>
                <value>
                    <fullName>Child Acct</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>CDS</fullName>
                </value>
                <value>
                    <fullName>Compliance Declined</fullName>
                </value>
                <value>
                    <fullName>DNB Custom</fullName>
                </value>
                <value>
                    <fullName>Experian Consumer</fullName>
                </value>
                <value>
                    <fullName>Equifax Consumer</fullName>
                </value>
                <value>
                    <fullName>Exp Lease Decision</fullName>
                </value>
                <value>
                    <fullName>Exst Acct Issue</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Financials</fullName>
                </value>
                <value>
                    <fullName>LOC</fullName>
                </value>
                <value>
                    <fullName>Mergents</fullName>
                </value>
                <value>
                    <fullName>Moodys</fullName>
                </value>
                <value>
                    <fullName>NATL Recon</fullName>
                </value>
                <value>
                    <fullName>No Hit</fullName>
                </value>
                <value>
                    <fullName>PMI Credit</fullName>
                </value>
                <value>
                    <fullName>PMI D&amp;B</fullName>
                </value>
                <value>
                    <fullName>PMI Exp Commercial</fullName>
                </value>
                <value>
                    <fullName>Program Flip</fullName>
                </value>
                <value>
                    <fullName>S&amp;P</fullName>
                </value>
                <value>
                    <fullName>SBRI Orig</fullName>
                </value>
                <value>
                    <fullName>SBRI Port</fullName>
                </value>
                <value>
                    <fullName>Security Deposit</fullName>
                </value>
                <value>
                    <fullName>Test Account</fullName>
                </value>
                <value>
                    <fullName>The Street</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Decision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Decision Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_Recommendation__c</fullName>
        <label>Credit Decision Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend Approve</fullName>
                </value>
                <value>
                    <fullName>Recommend Decline</fullName>
                </value>
                <value>
                    <fullName>Recommend Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Decision__c</fullName>
        <label>Credit Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
                <value>
                    <fullName>Approved - Rereview</fullName>
                </value>
                <value>
                    <fullName>Declined - Rereview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Info_Status__c</fullName>
        <label>Credit Info Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info Needed</fullName>
                </value>
                <value>
                    <fullName>Info Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Line_Recommendation__c</fullName>
        <label>Credit Line Recommendation</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Requested__c</fullName>
        <label>Credit Line Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_CSAD_High_Credit__c</fullName>
        <label>DNB CSAD High Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_Check__c</fullName>
        <label>DNB Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNB_City_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB City Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Confidence_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Confidence Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Credit_Line_Recommendation__c</fullName>
        <label>DNB Credit Line Recommendation</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_High_Credit__c</fullName>
        <label>DNB High Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_Lookup_Hits__c</fullName>
        <label>DNB Lookup Hits</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Lookup__c</fullName>
        <formula>HYPERLINK(&apos;/apex/DNBAdvancedLookup?applicationId=&apos; + Id, &apos;View Matches&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNB Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Match_Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Match Grade</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Match_Score__c</fullName>
        <label>DNB Match Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Model__c</fullName>
        <label>DNB Model</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Name_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Name Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Name_Match_Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Name Match Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Postal_Code_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Postal Code Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Reason_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Reason Code</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DNB_Resolution_Check__c</fullName>
        <label>DNB Resolution Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Decision_Engine_Check</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_DUNS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_SBFE_High_Credit__c</fullName>
        <label>DNB SBFE High Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_SBRI_Card_Score__c</fullName>
        <label>DNB SBRI Card Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Score__c</fullName>
        <description>Raw Model Score</description>
        <label>DNB Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_State_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB State Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Street_Name_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Street Name Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Street_Number_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Street Number Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Trade_Lines__c</fullName>
        <label>DNB # of Trade Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_App_Signed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date App Signed</label>
        <type>Date</type>
    </fields>
</CustomObject>